# cachesim

./: .clang-format  CMakeLists.txt
.github/workflows/: ci.yml
include/cachesim/: address.hpp  cache.hpp  cache_line.hpp  cache_set.hpp  config.hpp  memory_hierarchy.hpp  replacement_policy.hpp  types.hpp
include/cachesim/policies/: lru_policy.hpp
src/: main.cpp  replacement_policy.cpp
tests/: CMakeLists.txt  test_address_decomposition.cpp  test_cache.cpp  test_lru_policy.cpp  test_memory_hierarchy.cpp  test_memory_hierarchy_deep.cpp  test_placeholder.cpp
